# kmodtrust

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: app.yaml  main.rs
test/: Makefile
test/certs/: x509.genkey
test/module/: hello.c
