[package]
name = "kmodtrust"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"
description = "Linux Kernel Module (LKM) Integrity"
homepage = "https://github.com/puru1761/kmodtrust"
repository = "https://github.com/puru1761/kmodtrust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kmodtrust"
path = "src/main.rs"

[dependencies]
clap = {version = "~2.34.0", features = ["yaml"]}
openssl = { version = "0.10.38", features = ["vendored"] }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }